test/files/neg/t6558.check
t6558.scala:5: error: not found: type sth
    @sth
     ^
one error found
